cmake_minimum_required(VERSION 3.23)
project(Lab2 C)

set(CMAKE_C_STANDARD 23)

add_executable(Task1 T1/main.c functions.h functions.c)
add_executable(Task2 T2/main.c functions.h functions.c)
add_executable(Task3 T3/main.c functions.h functions.c)
add_executable(Task4 T4/main.c functions.h functions.c)
add_executable(Task7 T7/main.c functions.h functions.c)
add_executable(Task8 T8/main.c functions.h functions.c)
add_executable(Task9 T9/main.c functions.h functions.c)
add_executable(Task10 T10/main.c functions.h functions.c)
