cmake_minimum_required(VERSION 3.22)
project(Lab2 C)

set(CMAKE_C_STANDARD 23)

add_executable(Task1 T1/main.c functions.h functions.c)
add_executable(Task2 T2/main.c functions.h functions.c)
add_executable(Task3 T3/main.c functions.h functions.c)
add_executable(Task4 T4/main.c functions.h functions.c)
add_executable(Task5 T5/main.c functions.h functions.c)
add_executable(Task6 T6/main.c functions.h functions.c)
add_executable(Task7 T7/main.c functions.h functions.c)
add_executable(Task8 T8/main.c functions.h functions.c)
add_executable(Task9 T9/main.c functions.h functions.c)
add_executable(Task10 T10/main.c functions.h functions.c)

if (NOT MSVC)
    target_link_libraries(Task1 m)
    target_link_libraries(Task2 m)
    target_link_libraries(Task3 m)
    target_link_libraries(Task4 m)
    target_link_libraries(Task5 m)
    target_link_libraries(Task6 m)
    target_link_libraries(Task7 m)
    target_link_libraries(Task8 m)
    target_link_libraries(Task9 m)
    target_link_libraries(Task10 m)
endif ()